# LoKI-B-cpp

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  Makefile.am  Makefile.dist  Makefile.rules  README.md  configure.ac  flake.nix
Input/: CMakeLists.txt  default_lokib_setup.in  default_lokib_setup.json  lokib_setup_Maxwellian.in  lokib_setup_air.in  lokib_setup_delta.in  lokib_setup_oxygen.in
Input/Bench/hessenberg/: cellNumber_100.in  cellNumber_1000.in  cellNumber_1100.in  cellNumber_1200.in  cellNumber_1300.in  cellNumber_1400.in  cellNumber_1500.in  cellNumber_1600.in  cellNumber_1700.in  cellNumber_1800.in  cellNumber_1900.in  cellNumber_200.in  cellNumber_2000.in  cellNumber_2100.in  cellNumber_2200.in  cellNumber_2300.in  cellNumber_2400.in  cellNumber_2500.in  cellNumber_2600.in  cellNumber_2700.in  cellNumber_2800.in  cellNumber_2900.in  cellNumber_300.in  cellNumber_3000.in  cellNumber_3100.in  cellNumber_3200.in  cellNumber_3300.in  cellNumber_3400.in  cellNumber_3500.in  cellNumber_3600.in  cellNumber_3700.in  cellNumber_3800.in  cellNumber_3900.in  cellNumber_400.in  cellNumber_4000.in  cellNumber_4100.in  cellNumber_4200.in  cellNumber_4300.in  cellNumber_4400.in  cellNumber_4500.in  (+40 more)
Input/Databases/: anharmonicFrequencies.txt  harmonicFrequencies.txt  lennardJonesDepth.txt  masses.txt  quadrupoleMoment.txt  rotationalConstants.txt
Input/Delta/: Constant_Elastic.txt  Delta_Inelastic.txt  Ei.m  analytical.m  eedf.txt  eedf_loki.txt  eedf_matlab_1.txt  eedf_matlab_2.txt  eedf_matlab_2_18.txt  eedf_matlab_2_2.txt  eedf_matlab_2_21.txt  eedf_matlab_2_22.txt  eedf_matlab_2_6000.txt
Input/Input/: default_lokib_setup.in
Input/JSON/Ar/: Ar_Phelps_LXCat.json
Input/JSON/N2/: N2_LXCat.json  N2_rot_LXCat.json  N2_vib_LXCat.json
Input/JSON/v3/: N2_LXCat.json  N2_rot_LXCat.json
Input/JSON/v5/CO2/: CO2_LXCat.json
Input/JSON/v5/N2/: N2_LXCat.json  N2_rot_LXCat.json  N2_vib_LXCat.json
Input/JSON/v6/N2/: N2_LXCat.json  N2_rot_LXCat.json  N2_vib_LXCat.json
Input/LXCat-API/: argon_phelps.json  default_lokib_setup_lxcat.json
Input/Model/: Average_relative_error.fig  Constant_Elastic.txt  Delta_Inelastic.txt  Elastic.txt  make_maxwellian_comparison  plot_eedf.m  rawElastic.txt  test_margenau_constant_elastic_rate.m
Input/Model/Maxwellian/cellNumber_100/: elastic_cs_LXCat_10.txt  elastic_cs_LXCat_11.txt  elastic_cs_LXCat_18.txt  elastic_cs_LXCat_19.txt  elastic_cs_LXCat_2.txt  elastic_cs_LXCat_21.txt  elastic_cs_LXCat_22.txt  elastic_cs_LXCat_24.txt  elastic_cs_LXCat_25.txt  elastic_cs_LXCat_26.txt  elastic_cs_LXCat_29.txt  elastic_cs_LXCat_30.txt  elastic_cs_LXCat_31.txt  elastic_cs_LXCat_33.txt  elastic_cs_LXCat_37.txt  elastic_cs_LXCat_39.txt  elastic_cs_LXCat_40.txt  elastic_cs_LXCat_43.txt  elastic_cs_LXCat_44.txt  elastic_cs_LXCat_45.txt  elastic_cs_LXCat_47.txt  elastic_cs_LXCat_48.txt  elastic_cs_LXCat_49.txt  elastic_cs_LXCat_5.txt  elastic_cs_LXCat_50.txt  setup_1.in  (+22 more)
Input/Nitrogen/: N2_LXCat.json  N2_vib_LXCat.json
Input/Oxygen/: O2_LXCat.txt
app/: CMakeLists.txt  Makefile.am  loki_gasproperties.cpp  loki_legacytojson.cpp  loki_main.cpp  loki_offsidetojson.cpp
ideas/: CMakeLists.txt  HessenbergExtra.cpp  HessenbergExtra.h  LegacyToJSON.cpp  LegacyToJSON.h  Makefile.am  OffSideToJSON.cpp  OffSideToJSON.h  example_cd_discretizer.cpp  example_hessenberg_extra.cpp  json2lxcat.cpp  loki_legacytojson.cpp  loki_offsidetojson.cpp  loki_steps.cpp  test_legacy_to_json.cpp  test_offside_to_json.cpp
lib/: CMakeLists.txt  Makefile.am
loki-b/tests/: Makefile.am  bolsig_extract.cpp  bolsig_extract.in  compare_tables.cpp  test_druyvesteyn.cpp  test_parser.cpp  test_reaction_format.cpp  test_statebase.cpp
tests/: CMakeLists.txt  Makefile.am  TestUtilities.h  test_derivatives.cpp  test_druyvesteyn.cpp  test_ee.cpp  test_ee_relaxation.cpp  test_eedf_utilities.cpp  test_events.cpp  test_gas_properties.cpp  test_grid.cpp  test_integrals.cpp  test_interpolation.cpp  test_invalid_inputs.cpp  test_json_state_parsing.cpp  test_linalg.cpp  test_lut.cpp  test_maxwell.cpp  test_moving_mesh.cpp  test_mun_coefs.cpp  test_nonuniform_CAR.cpp  test_nonuniform_druyvesteyn.cpp  test_nonuniform_elastic.cpp  test_nonuniform_field.cpp  test_nonuniform_inelastic.cpp  test_nonuniform_operator_distribution.cpp  test_offside_to_json.cpp  test_parser.cpp  test_range.cpp  test_reaction_format.cpp  test_statebase.cpp  test_trans_coefs.cpp  test_valid_inputs.cpp
tests/cases/argon_full/: bolsig.in  lokib.in
tests/eigen_test/: backend_abstraction.h  deprecated.h  main.cpp
tests/event_listener/: main.cpp
tests/hess_reduction/: main.cpp
tests/hess_solver/: main.cpp
tests/invalid-inputs/duplicate-elastic/: error.out  input.in
tests/invalid-inputs/incomplete-populations/: error.out  input.in
tests/invalid-inputs/missing-elastic/: error.out  input.in  missing_elastic.txt
tests/invalid-inputs/multiple-effective/: error.out  input.in  multiple_effective.txt
tests/invalid-inputs/shared/: multiple_elastic_different_levels.txt
tests/loki_tests/: main.cpp
tests/lu_test/: main.cpp
tests/lua_test/: main.cpp
tests/lua_test/scripts/: exponential.lua  kB_in_eV.lua  square.lua  sum.lua
tests/reflection_test/: main.cpp
tests/regex_test/: main.cpp
tests/tiled_lu_test/: LinearAlgebra.h  TiledMatrix.h  main.cpp
tests/trait_test/: main.cpp
tests/trait_test_no_indexing/: Basic.h  Gas.h  GasMixture.h  State.h  Traits.h  Working_v1.h  main.cpp
tests/typedef_test/: main.cpp
tests/valid-inputs/default-input-N2/: input.in  output.json
wasm/: CMakeLists.txt  main.cpp
web/: .gitignore  CMakeLists.txt  bindings.cpp  index.html  index.js  json_output.js  plot.js  readme.md  schema.js  worker.js
web/Input/: N2_LXCat.json  N2_rot_LXCat.json  anharmonicFrequencies.txt  argon_phelps.json  argon_phelps_remote.json  argon_phelps_spatial.json  default_lokib_setup.json  default_lokib_setup_lxcat.json  default_lokib_setup_lxcat_remote.json  harmonicFrequencies.txt  masses.txt  quadrupoleMoment.txt
web/src/: .gitignore  Dockerfile  index.html  index.js  plot.js
(+20849 files in other folders)
